tests/snapshots/run_wpt_conformance__coreml_quantized_element-wise_binary_min.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
qdq_subgraph.https.any.js quantized element-wise binary min, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type quantize: parameter scale[0] has invalid rank 2, expected [0, 1].

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    inputA: f32[2, 2];
  }

  consts {
    operand_1: f32[1, 1] @bytes([224, 169, 175, 62]);
    operand_2: i8[1, 1] @bytes([128]);
    operand_3: i8[2, 2] @bytes([12, 24, 35, 11]);
    operand_4: f32[1, 1] @bytes([224, 169, 175, 62]);
    operand_5: i8[1, 1] @bytes([128]);
    operand_6: f32[1, 1] @bytes([224, 169, 175, 62]);
    operand_7: i8[1, 1] @bytes([128]);
  }

  nodes {
    [operand_8] = quantizeLinear(inputA, operand_1, operand_2, label="");
    [operand_9] = dequantizeLinear(operand_8, operand_1, operand_2, label="");
    [operand_10] = dequantizeLinear(operand_3, operand_4, operand_5, label="");
    [operand_11] = min(operand_9, operand_10, label="");
    [operand_12] = quantizeLinear(operand_11, operand_6, operand_7, label="");
    [output] = dequantizeLinear(operand_12, operand_6, operand_7, label="");
  }

  outputs { output; }
}
